# dryad

./: LICENSE  README.md  pyproject.toml
src/: batches.py  cli.py  constants.py  main.py  model.py  samplers.py
src/server/: openai.py  well_known.py
